# ephios-plugin-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.app_name }}/: pyproject.toml
{{ cookiecutter.app_name }}/{{cookiecutter.app_name}}/: __init__.py  apps.py
