[tool.poetry]
name = "{{ cookiecutter.app_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "{{ cookiecutter.license }}"

[tool.poetry.dependencies]
python = "^3.8"
ephios = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"{{ cookiecutter.app_name }}" = "{{ cookiecutter.app_name }}"
